--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,10 @@
+---
+import '../styles/global.css';
+import Header from '../components/Header.astro';
+import TopBarAnnouncement from '../components/TopBarAnnouncement.astro';
+import Footer from '../components/Footer.astro';
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -8,7 +15,10 @@
 		<title>Astro Basics</title>
 	</head>
 	<body>
+		<TopBarAnnouncement />
+		<Header />
 		<slot />
+		<Footer />
 	</body>
 </html>
 
