--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
-import Welcome from '../components/Welcome.astro';
+import ComparisonSection from '../components/ComparisonSection.astro';
+import FeatureOverview from '../components/FeatureOverview.astro';
+import HeroSection from '../components/HeroSection.astro';
+import PainPointSection from '../components/PainPointSection.astro';
 import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -7,5 +10,8 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<HeroSection />
+	<PainPointSection />
+	<FeatureOverview />
+	<ComparisonSection />
 </Layout>
