--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,8 @@ import ComparisonSection from '../components/ComparisonSection.astro';
 import FeatureOverview from '../components/FeatureOverview.astro';
 import HeroSection from '../components/HeroSection.astro';
 import PainPointSection from '../components/PainPointSection.astro';
+import ProductDemoShowcase from '../components/ProductDemoShowcase.astro';
+import UseCases from '../components/UseCases.astro';
 import Layout from '../layouts/Layout.astro';
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
@@ -14,4 +16,6 @@ import Layout from '../layouts/Layout.astro';
 	<PainPointSection />
 	<FeatureOverview />
 	<ComparisonSection />
+	<ProductDemoShowcase />
+	<UseCases />
 </Layout>
