--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,12 @@
 ---
+import AnalyticsSection from '../components/AnalyticsSection.astro';
 import ComparisonSection from '../components/ComparisonSection.astro';
+import FAQSection from '../components/FAQSection.astro';
 import FeatureOverview from '../components/FeatureOverview.astro';
 import HeroSection from '../components/HeroSection.astro';
 import PainPointSection from '../components/PainPointSection.astro';
 import ProductDemoShowcase from '../components/ProductDemoShowcase.astro';
+import TestimonialsSection from '../components/TestimonialsSection.astro';
 import UseCases from '../components/UseCases.astro';
 import Layout from '../layouts/Layout.astro';
 
@@ -18,4 +21,7 @@ import Layout from '../layouts/Layout.astro';
 	<ComparisonSection />
 	<ProductDemoShowcase />
 	<UseCases />
+	<AnalyticsSection />
+	<TestimonialsSection />
+	<FAQSection />
 </Layout>
