--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ import '../styles/global.css';
 import Header from '../components/Header.astro';
 import TopBarAnnouncement from '../components/TopBarAnnouncement.astro';
 import Footer from '../components/Footer.astro';
+
+const { forceSolidHeader = false } = Astro.props;
 ---
 
 <!doctype html>
@@ -22,7 +24,7 @@ import Footer from '../components/Footer.astro';
 	</head>
 	<body>
 		<TopBarAnnouncement />
-		<Header />
+		<Header forceSolidBackground={forceSolidHeader} />
 		<slot />
 		<Footer />
 	</body>
