--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,13 +15,13 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout>
-	<HeroSection />
-	<PainPointSection />
-	<FeatureOverview />
-	<ComparisonSection />
-	<ProductDemoShowcase />
-	<UseCases />
-	<AnalyticsSection />
-	<TestimonialsSection />
-	<FAQSection />
+	<HeroSection /> <!-- Hero Section -->
+	<PainPointSection /> <!-- The Subscription Struggle is Real-->
+	<FeatureOverview /> <!-- Powerful Feature Section -->
+	<ComparisonSection /> <!-- Comparison Section || Why Stores Are Switching to Recurio -->
+	<ProductDemoShowcase /> <!-- See Recurio in Action -->
+	<UseCases /> <!-- Built for your Industry || Perfect for Every Subscription Business -->
+	<AnalyticsSection /> <!-- Analytics & Insights Section -->
+	<TestimonialsSection /> <!-- Industry Scenarios || Testimonials Section -->
+	<FAQSection /> <!-- FAQ Section -->
 </Layout>
