--- a/src/pages/pricing.astro
+++ b/src/pages/pricing.astro
@@ -1,8 +1,30 @@
 ---
+import PricingCta from '../components/pricing/PricingCta.astro';
+import PricingCards from '../components/pricing/PricingCards.astro';
+import PricingFaq from '../components/pricing/PricingFaq.astro';
+import PricingHero from '../components/pricing/PricingHero.astro';
+import PricingNotifications from '../components/pricing/PricingNotifications.astro';
+import PricingProFeatures from '../components/pricing/PricingProFeatures.astro';
+import PricingScripts from '../components/pricing/PricingScripts.astro';
+import PricingTrustBadges from '../components/pricing/PricingTrustBadges.astro';
+import { colorClasses, iconSvg, pricingTiers, proFeatures, faqs } from '../components/pricing/pricingData.js';
 import Layout from '../layouts/Layout.astro';
-import PricingPage from '../components/PricingPage.astro';
 ---
 
-<Layout forceSolidHeader={true}>
-	<PricingPage />
+<Layout
+	forceSolidHeader={true}
+	title="Pricing - Recurio"
+	description="Simple, transparent pricing for Recurio. Choose the plan that fits your business. All plans include automated billing, analytics, and customer portals. Start with a 14-day free trial."
+	canonicalUrl="https://recurio.com/pricing"
+>
+	<section data-pricing-page>
+		<PricingHero iconSvg={iconSvg} />
+		<PricingNotifications iconSvg={iconSvg} />
+		<PricingCards pricingTiers={pricingTiers} colorClasses={colorClasses} iconSvg={iconSvg} />
+		<PricingProFeatures proFeatures={proFeatures} iconSvg={iconSvg} />
+		<PricingFaq faqs={faqs} iconSvg={iconSvg} />
+		<PricingTrustBadges iconSvg={iconSvg} />
+		<PricingCta iconSvg={iconSvg} />
+	</section>
+	<PricingScripts />
 </Layout>
