--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import '../styles/global.css';
 import Header from '../components/Header.astro';
 import TopBarAnnouncement from '../components/TopBarAnnouncement.astro';
+import WaitingListModal from '../components/WaitingListModal.astro';
 import Footer from '../components/Footer.astro';
 
 const {
@@ -47,6 +48,7 @@ const {
 	</head>
 	<body>
 		<TopBarAnnouncement />
+		<WaitingListModal />
 		<Header forceSolidBackground={forceSolidHeader} />
 		<slot />
 		<Footer />
